# content-telegram-bot

./: .gitignore  bot.session  client.session  pyproject.toml  readme.md
bot/: bot.py  bot.session-journal  client.py  client.session-journal  config.py  loader.py  run.py  server.py
bot/db/models/: __init__.py  base.py  channel.py  channel_tag.py  models.py  post.py  post_tag.py  tag.py
bot/services/: channel.py  keyboard.py  post.py  tag.py  tags.py
