[tool.poetry]
name = "content-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Kozorez-V <kozorezviktoria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
telethon = "^1.34.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
